--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "module",
     "rad"
   ],
+  "type": "library",
   "license": "MIT",
   "authors": [
     {
@@ -52,9 +53,6 @@
       "aliases": {
         "Module": "Mhmmdkyr\\Modules\\Facades\\Module"
       }
-    },
-    "branch-alias": {
-      "dev-master": "9.0-dev"
     }
   },
   "scripts": {
